kube/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  labels:
    app: rcgehphkgo-www
    volkn/cd-name_github_ybrin_rcgehphkgo: master.0
  name: rcgehphkgo-www
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rcgehphkgo-www
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rcgehphkgo-www
    spec:
      containers:
      - image: gcr.io/boilertalk-main/github.com/ybrin/rcgehphkgo@sha256:4c367dbf91b31f48c84058b5b2a26dc26f1b5872146e7937f088ecf5bf495f7b
        imagePullPolicy: Always
        name: rcgehphkgo-www
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
