kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rcgehphkgo-www-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: rcgehphkgo-www
  ports:
    - port: 80
      targetPort: 80
      name: http
