kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: zssgeblkbk-www-ingress
  namespace: dev
spec:
  rules:
  - host: zssgeblkbk.com
    http:
      paths:
      - backend:
          serviceName: zssgeblkbk-www-service
          servicePort: 80
        path: /
  - host: www.zssgeblkbk.com
    http:
      paths:
      - backend:
          serviceName: zssgeblkbk-www-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - zssgeblkbk.com
    - www.zssgeblkbk.com
    secretName: zssgeblkbk-www-certificate-secret
